--- a/extension/react-app/package.json
+++ b/extension/react-app/package.json
@@ -13,6 +13,7 @@
     "@styled-icons/heroicons-solid": "^10.47.0",
     "@types/vscode-webview": "^1.57.1",
     "downshift": "^7.6.0",
+    "markdown": "^0.5.0",
     "posthog-js": "^1.58.0",
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
