--- a/extension/react-app/tsconfig.json
+++ b/extension/react-app/tsconfig.json
@@ -14,8 +14,9 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "typeRoots": ["types"]
   },
-  "include": ["src", "../src/util/messenger.ts"],
+  "include": ["src", "../src/util/messenger.ts", "types"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
