--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -9,7 +9,7 @@ jobs:
   pyinstaller:
     strategy:
       matrix:
-        os: [windows-latest, ubuntu-20.04, macos-latest]
+        os: [ubuntu-20.04]
 
     runs-on: ${{ matrix.os }}
 
@@ -49,7 +49,7 @@ jobs:
     needs: pyinstaller
     strategy:
       matrix:
-        os: [macos-latest, ubuntu-20.04, windows-latest]
+        os: [ubuntu-20.04]
 
     runs-on: ${{ matrix.os }}
 
@@ -69,20 +69,6 @@ jobs:
           name: LinuxBuild
           path: extension/server/exe
         if: matrix.os == 'ubuntu-20.04'
-
-      - name: Download macOS build
-        uses: actions/download-artifact@v2
-        with:
-          name: macOSBuild
-          path: extension/server/exe
-        if: matrix.os == 'macos-latest'
-
-      - name: Download Windows build
-        uses: actions/download-artifact@v2
-        with:
-          name: WindowsBuild
-          path: extension/server/exe
-        if: matrix.os == 'windows-latest'
 
       - name: Set permissions
         shell: bash
@@ -125,21 +111,6 @@ jobs:
           cd extension
           npm run prepackage
 
-      - name: Install Xvfb for Linux and run tests
-        run: |
-          sudo apt-get install -y xvfb # Install Xvfb
-          Xvfb :99 & # Start Xvfb
-          export DISPLAY=:99 # Export the display number to the environment
-          cd extension
-          npm run test
-        if: matrix.os == 'ubuntu-20.04'
-
-      - name: Run extension tests
-        run: |
-          cd extension
-          npm run test
-        if: matrix.os != 'ubuntu-20.04'
-
       # Create and upload .vsix artifact
       - name: Package the extension
         run: |
@@ -152,111 +123,3 @@ jobs:
           name: vsix-artifact
           path: extension/build/*
         if: matrix.os == 'ubuntu-20.04'
-
-      - name: Upload continue.log
-        uses: actions/upload-artifact@v2
-        with:
-          name: continue-log
-          path: /home/runner/.continue/continue.log
-        if: always()
-
-  publish:
-    needs: test-and-package
-    runs-on: ubuntu-20.04
-    permissions:
-      contents: write
-
-    steps:
-      # Checkout and download .vsix artifact
-
-      - name: Checkout
-        uses: actions/checkout@v2
-
-      - name: Download .vsix artifact
-        uses: actions/download-artifact@v2
-        with:
-          name: vsix-artifact
-          path: extension/build
-
-      # Publish the extension and commit/push the version change
-
-      - name: Use Node.js 19.0.0
-        uses: actions/setup-node@v3
-        with:
-          node-version: 19.0.0
-
-      - name: Cache extension node_modules
-        uses: actions/cache@v2
-        with:
-          path: extension/node_modules
-          key: ${{ runner.os }}-node-${{ hashFiles('extension/package-lock.json') }}
-
-      - name: Install extension Dependencies
-        run: |
-          cd extension
-          npm ci
-
-      - name: Publish (Open VSX Registry)
-        run: |
-          cd extension
-          npx ovsx publish -p ${{ secrets.VSX_REGISTRY_TOKEN }} --packagePath ./build/*.vsix
-
-      - name: Publish
-        run: |
-          cd extension
-          npx vsce publish -p ${{ secrets.VSCE_TOKEN }} --packagePath ./build/*.vsix
-
-      - name: Update version in package.json
-        run: |
-          cd extension
-          npm version patch
-
-      - name: Commit changes
-        run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
-          git commit -am "ci: 💚 Update package.json version [skip ci]"
-
-      - name: Push changes
-        uses: ad-m/github-push-action@master
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: ${{ github.ref }}
-
-      # Download binaries and upload to S3
-
-      - name: Download Linux build
-        uses: actions/download-artifact@v2
-        with:
-          name: LinuxBuild
-          path: exe/linux
-
-      - name: Download macOS build
-        uses: actions/download-artifact@v2
-        with:
-          name: macOSBuild
-          path: exe/mac
-
-      - name: Download Windows build
-        uses: actions/download-artifact@v2
-        with:
-          name: WindowsBuild
-          path: exe/windows
-
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-west-1
-
-      - name: Upload binaries to S3
-        uses: jakejarvis/s3-sync-action@master
-        with:
-          args: --acl public-read --follow-symlinks
-        env:
-          AWS_S3_BUCKET: continue-server-binaries
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: "us-west-1"
-          SOURCE_DIR: "exe"
